Update index.html File with h1 tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>Salam</h1>
     <div class="row vh-100 g-0">
         <!-- Left Side -->
         <div class="col-lg-6 position-relative d-none d-lg-block">
