--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>صفحه ورود</title>
     <link href="bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="style.css" rel="stylesheet">
-   
+
 </head>
 
 <body>
@@ -16,33 +17,38 @@
         <div class="col-lg-6 position-relative d-none d-lg-block">
             <div class="bg-holder" style="background-image: url(school.jpg);"></div>
         </div>
-    <!--/ End Left Side -->
-    <!-- Right Side -->
-    <div class="col-lg-6">
-        <div class="row align-items-center justify-content-center h-100 px-4 g-0 px-sm-0">
-            <div class="col col-sm-6 col-lg-7 col-xl-6">
-                <!-- Logo -->
-                <a href="https://google.com" class="d-flex justify-content-center mb-4">
-                    <img src="https://www.arvancloud.ir/images/v6/svg/logo-header-desktop-v6.svg" alt="Logo" width="60">
-                </a>
-                <!--/ Logo -->
+        <!--/ End Left Side -->
+        <!-- Right Side -->
+        <div class="col-lg-6">
+            <div class="row align-items-center justify-content-center h-100 px-4 g-0 px-sm-0">
+                <div class="col col-sm-6 col-lg-7 col-xl-6">
+                    <!-- Logo -->
+                    <a href="https://google.com" class="d-flex justify-content-center mb-4">
+                        <img src="https://www.arvancloud.ir/images/press/sign-main.png" alt="Logo" width="60">
+                    </a>
+                    <!--/ Logo -->
 
-                <div class="text-center mb-5">
-                    <h3 class="fw-bold">Login</h3>
-                    <p class="text-secondary">Get Access to Your Account</p>
+                    <div class="text-center mb-5">
+                        <h3 class="fw-bold">Login</h3>
+                        <p class="text-secondary">Get Access to Your Account</p>
+                    </div>
+                    <!-- Social Login -->
+                    <button class="btn btn-outline-secondary w-100 mb-3">
+                        <i class='bx bxl-google text-danger fs-6'></i> Login With Google!
+                    </button>
+                    <button class="btn btn-outline-secondary w-100">
+                        <i class='bx bxl-facebook text-primary fs-6'></i> Login With Facebook
+                    </button>
+                    <!--/ Social Login -->
+                    <!-- Divider -->
+                    <div class="position-relative">
+                        <hr class="text-secondary divider">
+                        <div class="divider-content-center">OR</div>
+                    </div>
+                    <!--/ Divider -->
                 </div>
-                <!-- Social Login -->
-                <button class="btn btn-outline-secondary btn-lg w-100 mb-3">
-                    Login With Google!
-                </button>
-                <button class="btn btn-outline-secondary btn-lg w-100">
-                    Login With Facebook
-                </button>
-                <!--/ Social Login -->
-                
             </div>
         </div>
-    </div>
     </div>
 
 </body>
