Add Username and pasword form input + Login Button + Remember me and forget password link and checkbox and already sign up text

--- a/index.html
+++ b/index.html
@@ -46,6 +46,35 @@
                         <div class="divider-content-center">OR</div>
                     </div>
                     <!--/ Divider -->
+                    <!-- Form -->
+                    <form action="#">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="bx bx-user"></i>
+                            </span>
+                            <input type="text" class="form-control form-control-lg fs-6" placeholder="UserName">
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="bx bx-lock"></i>
+                            </span>
+                            <input type="password" class="form-control form-control-lg fs-6" placeholder="Password">
+                        </div>
+                        <div class="input-group mb-3 d-flex justify-content-between">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="formcheck">
+                                <label for="formcheck" class="form-check-label text-secondary"><small>Remember Me</small></label>
+                            </div>
+                            <div>
+                                <small><a href="#">Forget Password?</a></small>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-lg w-100 mb-3">Login</button>
+                    </form>
+                    <!--/ Form -->
+                    <div class="text-center">
+                        <small>Don't have an account yet? <a href="#" class="fw-bold"> Sign Up Now!</a></small>
+                    </div>
                 </div>
             </div>
         </div>
